refactor(tag): 重构文件搜索的tag支持
